--- a/.chloggen/mx-psi_internal-localhostgate.yaml
+++ b/.chloggen/mx-psi_internal-localhostgate.yaml
@@ -20,6 +20,7 @@ subtext: |
     - receiver/loki
     - receiver/opencensus
     - receiver/zipkin
+    - receiver/awsfirehose
 
 # If your change doesn't affect end users or the exported elements of any package,
 # you should instead start your pull request title with [chore] or use the "Skip Changelog" label.
