--- a/.chloggen/mx-psi_internal-localhostgate.yaml
+++ b/.chloggen/mx-psi_internal-localhostgate.yaml
@@ -21,6 +21,7 @@ subtext: |
     - receiver/opencensus
     - receiver/zipkin
     - receiver/awsfirehose
+    - processor/remotetap
 
 # If your change doesn't affect end users or the exported elements of any package,
 # you should instead start your pull request title with [chore] or use the "Skip Changelog" label.
