--- a/exporter/instanaexporter/metadata.yaml
+++ b/exporter/instanaexporter/metadata.yaml
@@ -7,3 +7,7 @@ status:
   distributions: [contrib]
   codeowners:
     active: [jpkrohling, hickeyma]
+
+tests:
+  config:
+  expect_consumer_error: true
