--- a/.chloggen/mx-psi_internal-localhostgate.yaml
+++ b/.chloggen/mx-psi_internal-localhostgate.yaml
@@ -23,6 +23,7 @@ subtext: |
     - receiver/awsfirehose
     - processor/remotetap
     - receiver/splunk_hec
+    - receiver/awsxray
 
 # If your change doesn't affect end users or the exported elements of any package,
 # you should instead start your pull request title with [chore] or use the "Skip Changelog" label.
