--- a/exporter/elasticsearchexporter/metadata.yaml
+++ b/exporter/elasticsearchexporter/metadata.yaml
@@ -7,7 +7,7 @@ status:
     beta: [traces, logs]
   distributions: [contrib]
   codeowners:
-    active: [JaredTan95]
+    active: [JaredTan95, ycombinator]
 
 tests:
   config:
